fix: enlarge logos on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -405,7 +405,7 @@
         }
         
         .partner-logo {
-            height: 40px;
+            height: 70px;
         }
         
         footer {
